Improve builder pattern